Changed someone to Matt

--- a/essay/presentation.tex
+++ b/essay/presentation.tex
@@ -375,7 +375,7 @@ One one dataset, how well do these reductions correspond to expert knowledge?
 
 \begin{frame}
 \frametitle{Important heuristic}
-We remove every implication that comes from "know one thing about someone, know everything about them".
+We remove every implication that comes from "know one thing about Matt, know everything about Matt".
 \end{frame}
 
 \begin{frame}
