Added gimmicky close

--- a/essay/presentation.tex
+++ b/essay/presentation.tex
@@ -396,8 +396,8 @@ The more negative implications we can find heuristics for, the better our accura
 \frametitle{Conclusions}
 \begin{itemize}
 \item We can find more information than $\pass/\fail$
-\item We can algorithmically produce and simplify a ranking of solutions
-\item We can algorithmically produce and simplify a diagnostic set of failures for each solution
+\item We can algorithmically produce and simplify a ranking of solutions \only<2->{\textbf{cheaply}}
+\item We can algorithmically produce and simplify a diagnostic set of failures for each solution \only<2->{\textbf{cheaply}}
 \end{itemize}
 \end{frame}
 
